style(news): fix date text not visible

--- a/src/app/pages/news/news.page.scss
+++ b/src/app/pages/news/news.page.scss
@@ -17,6 +17,9 @@ ion-card {
     }
     p {
       margin-left: 5px;
+      color: var(--ion-color-step-450);
+      font-weight: bold;
+      margin-bottom: 3px;
     }
   }
 }
